--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h2>Menu</h2>
           <div class="linha"></div>
           <a href="/inicio">Início</a>
-          <a href="/servicos.html">Serviços</a>
+          <a href="/servicos">Serviços</a>
           <a href="/portfolio">Portfólio</a>
           <a href="/contato">Contato</a>
         </div>
