--- a/index.html
+++ b/index.html
@@ -25,16 +25,36 @@
         <div class="menu">
           <h2>Menu</h2>
           <div class="linha"></div>
-          <a href="/inicio">Início</a>
-          <a href="/servicos">Serviços</a>
-          <a href="/portfolio">Portfólio</a>
-          <a href="/contato">Contato</a>
+          <ul>
+            <li>
+              <a href="/inicio">Início</a>
+              <a href="/servicos">Serviços</a>
+              <a href="/portfolio">Portfólio</a>
+              <a href="/contato">Contato</a>
+              <p>
+                A DOKA Locações é uma empresa especializada na área da
+                construção civil, atuando em Uberaba/MG e região, exercendo
+                diversas atividades com máquinas e tratores que compreendem
+                terraplanagens, fundações, arrimos, escavação, perfuração e
+                diversos outros segmentos. Contando com profissionais altamente
+                treinados e qualificados, a qualidade e satisfação dos clientes
+                está assegurada em todos os tipos de serviços prestados.
+              </p>
+            </li>
+          </ul>
         </div>
       </div>
+
       <div class="coluna-maior">
-        <h2>Habilidades</h2>
-        <div class="habilidades">
-          <div class="habilidade">
+        <video width="500" height="780" controls="controls" autoplay="autoplay">
+          <source src="003.mp4" type="video/mp4" />
+          <object data="" width="240" height="320">
+            <embed width="240" height="320" src="003.mp4" />
+          </object>
+        </video>
+        <!-- <h2>Habilidades</h2> -->
+        <!-- <div class="habilidades"> -->
+        <!-- <div class="habilidade">
             <h3>Front</h3>
             <ul>
               <li>
@@ -68,9 +88,9 @@
                 </div>
               </li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="habilidade">
+        <!-- <div class="habilidade">
             <h3>Outros</h3>
             <ul>
               <li>
@@ -114,8 +134,8 @@
                 </div>
               </li>
             </ul>
-          </div>
-          <div class="habilidade">
+          </div> -->
+        <!-- <div class="habilidade">
             <h3>Soft skills</h3>
             <ul>
               <li>
@@ -159,41 +179,41 @@
                 </div>
               </li>
             </ul>
-          </div>
-        </div>
-        <h2>Arquitetura</h2>
+          </div> -->
+        <!-- </div> -->
+        <!-- <h2>Arquitetura</h2>
         <div class="arquitetura">
           <div class="arquit">
             <h3>Portfólio Arquitetura</h3>
             <img src="port.png" />
             <a href="https://luanasar.wixsite.com/portfolio">Ver portfolio</a>
           </div>
-        </div>
-        <h2>Social</h2>
-        <div class="socials">
-          <div class="social">
+        </div> -->
+        <!-- <h2>Social</h2> -->
+        <!-- <div class="socials"> -->
+        <!-- <div class="social">
             <h3>LinkedIn</h3>
             <img src="" />
             <a href="https://www.linkedin.com/in/luana-rezende-7a7781129/"
               >Ver perfil</a
             >
-          </div>
-          <div class="social">
+          </div> -->
+        <!-- <div class="social">
             <h3>Behance</h3>
             <img src="bh.png" />
             <a href="https://www.behance.net/luana_sar2df7">Ver perfil</a>
-          </div>
-          <div class="social">
+          </div> -->
+        <!-- <div class="social">
             <h3>Facebook</h3>
             <img src="fb.png" />
             <a href="https://www.facebook.com/luana.rezende.161/">Ver perfil</a>
-          </div>
-          <div class="social">
+          </div> -->
+        <!-- <div class="social">
             <h3>Instagram</h3>
             <img src="inst.png" />
             <a href="https://www.instagram.com/luana.sar/">Ver perfil</a>
-          </div>
-        </div>
+          </div> -->
+        <!-- </div> -->
       </div>
     </main>
     <footer>
